# ranpha

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflow/: ci.yml
src/: config.rs  main.rs  qr.rs  validate.rs
