[package]
name = "ranpha"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Generate QR code of your Wi-FI network."
repository = "https://github.com/JohnTitor/ranpha"
homepage = "https://github.com/JohnTitor/ranpha"
documentation = "https://docs.rs/ranpha"
include = ["src/**/*", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = "0.5"
qrcode-generator = "4.1.6"
